feat(fullstack): 完善报名审核与用户信息联动
统一前后端在报名审核、成绩管理和个人资料中的状态字段与展示逻辑，补充审核原因与相关文档和SQL变更，减少角色端信息不一致问题。

Made-with: Cursor